	cvtool/cmd_wavelets.c, doc/cvtool.texi: Add Hard Thresholding to the
	wavelets module.
	* cvl/cvl_wavelets.c, cvl/glsl/wavelets/dwt_step1.glsl,
	cvl/glsl/wavelets/dwt_step2.glsl, cvl/glsl/wavelets/idwt_step1.glsl,
	cvl/glsl/wavelets/idwt_step2.glsl: Improve wavelets code.
	* cvl/cvl_wavelets.c: Fix a bug in cvl_wavelets_idwt() for levels
	greater than 1. There are still more bugs.

2008-08-19  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_dwt.c, cvl/cvl/cvl_dwt.h, cvl/cvl/cvl.h, cvl/glsl/dwt, 
	cvl/glsl/dwt/dwt_step1.glsl, cvl/glsl/dwt/dwt_step2.glsl, 
	cvl/glsl/dwt/idwt_step1.glsl, cvl/glsl/dwt/idwt_step2.glsl, 
	cvl/glsl/dwt/soft_thresholding.glsl, cvl/Makefile.am, cvtool/cmd_dwt.c,
	cvtool/cvtool.c, cvtool/Makefile.am, tests/cmd_dwt.sh, 
	tests/Makefile.am, doc/cvtool.texi: Add Discrete Wavelet Transform,
	Inverse Discrete Wavelet Transform, and Soft Thresholding
	functionality. This preliminary version only works for level 1.

2008-07-29  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_io.c: Read PFS frames with channels R, G, B into CVL_RGB
	frames. Also fix reading of X, Y, Z frames where the channels do not
	appear in this order.

2008-07-25  Martin Lambers <marlam@marlam.de>

	* NEWS: Update for version 0.2.5.

2008-07-22  Martin Lambers <marlam@marlam.de>

	* configure.ac, doc/cvl.texi, doc/cvtool.texi, doc/cvtool.1: Bump
	version to 0.2.5.
	* gnulib/*: Gnulib update.
	* gnulib/m4/absolute-header.m4, gnulib/Makefile.am, 
	gnulib/m4/gnulib-cache.m4, gnulib/m4/gnulib-comp.m4: Add gnulib module
	absolute-header.
	* cvtool/cmd_foreach.c: Update the use of wait_subprocess() to reflect
	changes in the gnulib module.
	* build-aux/glew.m4, build-aux/Makefile.am, configure.ac,
	cvl/Makefile.am, cvtool/Makefile.am: Improve detection and usage of
	external libraries.
	* cvl/cvl_misc.c: Reduce memory usage of cvl_reduce().
	* cvl/cvl/cvl_frame.h, cvl/cvl_frame.c, cvl/cvl_intern.h,
	cvl/cvl_init.c, cvl/cvl_misc.c, cvl/cvl_io.c, cvl/cvl_hdr.c: Add