@@ -18,6 +18,8 @@
 	cvl/glsl/wavelets/idwt_step2.glsl: Improve wavelets code.
 	* cvl/cvl_wavelets.c: Fix a bug in cvl_wavelets_idwt() for levels
 	greater than 1. There are still more bugs.
+	* cvl/cvl_wavelets.c, cvl/glsl/wavelets/idwt_step2.glsl: Finally fix
+	cvl_wavelets_idwt() for levels greater than one.
 
 2008-08-19  Martin Lambers <marlam@marlam.de>
 
